Fix current overflow

--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,7 @@
 .queue,
 .history {
   flex-grow: 1;
+  flex-basis: 0;
   display: flex;
   flex-direction: column;
   overflow: scroll;
@@ -62,7 +63,7 @@
   flex-grow: 0;
   flex-shrink: 0;
   flex-basis: 0;
-  height: 60px;
+  height: 70px;
 }
 
 a {
